@@ -1089,7 +1089,63 @@ Users_Guide/en-US/Websites_product_version_rpm.xml
 Users_Guide/en-US/Websites_structure_manual.xml
 Users_Guide/en-US/Websites_structure_rpm.xml
 Users_Guide/en-US/xrefs_and_conditionals.xml
+Users_Guide/it-IT/Adding_Code_Samples.po
+Users_Guide/it-IT/Adding_Files.po
+Users_Guide/it-IT/Adding_Images.po
+Users_Guide/it-IT/Applicable_to_RPM_only.po
+Users_Guide/it-IT/Author_Group.po
+Users_Guide/it-IT/Book_Info.po
+Users_Guide/it-IT/Branding.po
+Users_Guide/it-IT/Building_a_Book.po
+Users_Guide/it-IT/Command_summary.po
+Users_Guide/it-IT/Conditionaltagging.po
+Users_Guide/it-IT/Creating_a_Book.po
+Users_Guide/it-IT/Creating_a_Brand.po
+Users_Guide/it-IT/Desktop_menu_spec.po
+Users_Guide/it-IT/Desktop_menus.po
+Users_Guide/it-IT/Disallowed_tags_and_attributes.po
+Users_Guide/it-IT/Draft.po
+Users_Guide/it-IT/Drupal_Import.po
+Users_Guide/it-IT/Dump_File.po
+Users_Guide/it-IT/Entities.po
+Users_Guide/it-IT/FAQ.po
+Users_Guide/it-IT/Files_in_the_Book_Directory.po
+Users_Guide/it-IT/Files_in_the_Brand_Directory.po
+Users_Guide/it-IT/Image_width.po
+Users_Guide/it-IT/Installing_a_Brand.po
+Users_Guide/it-IT/Installing_Publican.po
+Users_Guide/it-IT/Installing_Publican_OpenSuse.po
+Users_Guide/it-IT/Introduction.po
+Users_Guide/it-IT/Language_Codes.po
+Users_Guide/it-IT/Packaging_a_Book.po
+Users_Guide/it-IT/Packaging_a_brand.po
+Users_Guide/it-IT/Permitted_alphanumeric.po
+Users_Guide/it-IT/Permitted_integers.po
+Users_Guide/it-IT/Permitted_numbers.po
+Users_Guide/it-IT/Preface.po
+Users_Guide/it-IT/Preparing_a_Book_for_Translation.po
+Users_Guide/it-IT/Publican_cfg_parameters.po
+Users_Guide/it-IT/Publican_Commands.po
+Users_Guide/it-IT/Publican_Defaults.po
+Users_Guide/it-IT/Renaming_a_document.po
+Users_Guide/it-IT/Revision_History.po
+Users_Guide/it-IT/Revision_History.xml
+Users_Guide/it-IT/Root_nodes_and_conditionals.po
+Users_Guide/it-IT/Sets.po
+Users_Guide/it-IT/Users_Guide.po
+Users_Guide/it-IT/Websites.po
+Users_Guide/it-IT/Websites_documents_manual.po
+Users_Guide/it-IT/Websites_documents_rpm.po
+Users_Guide/it-IT/Websites_homepage_manual.po
+Users_Guide/it-IT/Websites_homepage_rpm.po
+Users_Guide/it-IT/Websites_product_version_manual.po
+Users_Guide/it-IT/Websites_product_version_rpm.po
+Users_Guide/it-IT/Websites_structure_manual.po
+Users_Guide/it-IT/Websites_structure_rpm.po
+Users_Guide/it-IT/xrefs_and_conditionals.po
 Users_Guide/publican.cfg
+Users_Guide/zanata.xml
+web/default.js
 web/images/arrows.png
 web/images/close.png
 web/images/gradient1.png
@@ -1103,7 +1159,6 @@ web/jquery.jcarousel.min.js
 web/menu.css
 web/print.css
 web/static.css
-web/toc.js
 win_build.pl
 win_catalog.xml
 windows/pp-opts
