@@ -54,7 +54,7 @@
 				</listitem>
 				<listitem>
 					<para>
-						<filename>toc.js</filename> — a JavaScript script that directs visitors to localized content based on the locale set in their browser and which controls the presentation of the navigation menu.
+						<filename>defualt.js</filename> — a JavaScript script that directs visitors to localized content based on the locale set in their browser and which controls the presentation of the navigation menu.
 					</para>
 				</listitem>
 				<listitem>
